Cute lil' integration test added

--- a/Source/WebApplication1/WebApplication1/Views/Test/Index.cshtml
+++ b/Source/WebApplication1/WebApplication1/Views/Test/Index.cshtml
@@ -6,6 +6,6 @@
 @if (@Model.RandomString.Length > 0)
 {
     <div class="text-center">
-        @Model.RandomString
+        Test: @Model.RandomString
     </div>
 }
