--- a/Source/WebApplication1/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/Source/WebApplication1/WebApplication1/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
                         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Test" asp-action="Index">Testing Crap</a>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Test" asp-action="IndexApi">Testing Crap</a>
                     </li>
                 </ul>
             </div>
