--- a/Source/WebApplication1/AvaloniaApplication1/Views/MainWindow.axaml
+++ b/Source/WebApplication1/AvaloniaApplication1/Views/MainWindow.axaml
@@ -12,14 +12,17 @@
     <Design.DataContext>
         <!-- This only sets the DataContext for the previewer in an IDE,
              to set the actual DataContext for runtime, set the DataContext property in code (look at App.axaml.cs) -->
-        <vm:MainWindowViewModel/>
+        <vm:MainWindowViewModel />
     </Design.DataContext>
 
-    <StackPanel>
-        <TextBlock Text="{Binding Greeting}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+    <StackPanel HorizontalAlignment="Left">
+        <TextBlock Text="{Binding Greeting}" VerticalAlignment="Center" />
         <Button Name="btnClickMe" Content="{Binding ButtonText}" Click="ClickHandler"></Button>
         <TextBlock Name="buttonMessage" Text="Waiting to be clicked"></TextBlock>
+        <ProgressBar Name="pbClickProgress" Margin="0 10" 
+                     Height="20" Minimum="0" Maximum="100" Value="0" ShowProgressText="True" 
+                     Width="10"/>
     </StackPanel>
-    
+
 
 </Window>
