--- a/Source/WebApplication1/AvaloniaApplication1/Views/MainWindow.axaml
+++ b/Source/WebApplication1/AvaloniaApplication1/Views/MainWindow.axaml
@@ -16,9 +16,9 @@
     </Design.DataContext>
 
     <StackPanel HorizontalAlignment="Left">
-        <TextBlock Text="{Binding Greeting}" VerticalAlignment="Center" />
+        <TextBlock Name="tbHeader" Text="{Binding Greeting}" VerticalAlignment="Center" />
         <Button Name="btnClickMe" Content="{Binding ButtonText}" Click="ClickHandler"></Button>
-        <TextBlock Name="buttonMessage" Text="Waiting to be clicked"></TextBlock>
+        <TextBlock Name="tbButtonMessage" Text="Waiting to be clicked"></TextBlock>
         <ProgressBar Name="pbClickProgress" Margin="0 10" 
                      Height="20" Minimum="0" Maximum="100" Value="0" ShowProgressText="True" 
                      Width="10"/>
