--- a/Source/WebApplication1/AvaloniaApplication1/Views/MainWindow.axaml
+++ b/Source/WebApplication1/AvaloniaApplication1/Views/MainWindow.axaml
@@ -7,7 +7,9 @@
         x:Class="AvaloniaApplication1.Views.MainWindow"
         x:DataType="vm:MainWindowViewModel"
         Icon="/Assets/avalonia-logo.ico"
-        Title="AvaloniaApplication1">
+        Title="AvaloniaApplication1"
+        Width="800"
+        Height="500">
 
     <Design.DataContext>
         <!-- This only sets the DataContext for the previewer in an IDE,
@@ -21,7 +23,9 @@
         <TextBlock Name="tbButtonMessage" Text="Waiting to be clicked"></TextBlock>
         <ProgressBar Name="pbClickProgress" Margin="0 10" 
                      Height="20" Minimum="0" Maximum="100" Value="0" ShowProgressText="True" 
-                     Width="10"/>
+                     Width="10" HorizontalAlignment="Left"/>
+        <Button Name="btnGuid" Content="{Binding ButtonGuidText}" Click="GenerateRandomGuid"></Button>
+        <TextBox Name="tbGuidBlock" Text="Waiting to be clicked"></TextBox>
     </StackPanel>
 
 
